[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/ship_0004.png" type="Texture" id=1]
[ext_resource path="res://Lighthouse/Kenney Thick.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Antenna/Plane.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 36, 30 )

[node name="Plane" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 3 )

[node name="Bubble" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.0
margin_top = -126.0
margin_right = 48.0
margin_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 45.6667, 54 )
size_flags_horizontal = 13
size_flags_vertical = 13

[node name="VBoxContainer" type="VBoxContainer" parent="Bubble"]
margin_left = 7.0
margin_top = 7.0
margin_right = 87.0
margin_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="Bubble/VBoxContainer"]
self_modulate = Color( 0.317647, 1, 0.376471, 1 )
margin_right = 80.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 5 )
text = "Reference"

[node name="Panel" type="ColorRect" parent="Bubble/VBoxContainer"]
margin_top = 13.0
margin_right = 80.0
margin_bottom = 53.0
rect_min_size = Vector2( 80, 40 )
color = Color( 0, 0, 0, 1 )

[node name="ReferenceLine" type="Line2D" parent="Bubble/VBoxContainer/Panel"]
unique_name_in_owner = true
position = Vector2( 0, 20 )
points = PoolVector2Array( 0, 0, 80, 0 )
width = 1.0
default_color = Color( 0.196078, 1, 0, 1 )

[node name="Label6" type="Label" parent="Bubble/VBoxContainer"]
self_modulate = Color( 1, 0.529412, 0.529412, 1 )
margin_top = 57.0
margin_right = 80.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 5 )
text = "Variable"

[node name="Panel2" type="ColorRect" parent="Bubble/VBoxContainer"]
margin_top = 70.0
margin_right = 80.0
margin_bottom = 110.0
rect_min_size = Vector2( 80, 40 )
color = Color( 0, 0, 0, 1 )

[node name="VariableLine" type="Line2D" parent="Bubble/VBoxContainer/Panel2"]
unique_name_in_owner = true
position = Vector2( 0, 20 )
points = PoolVector2Array( 0, 0, 80, 0 )
width = 1.0
default_color = Color( 1, 0.176471, 0.176471, 1 )

[node name="Label" type="Label" parent="Bubble/VBoxContainer"]
self_modulate = Color( 0.988235, 0.647059, 0, 1 )
margin_top = 114.0
margin_right = 80.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 5 )
text = "Timer"

[node name="TimerLabel" type="Label" parent="Bubble/VBoxContainer"]
unique_name_in_owner = true
margin_top = 127.0
margin_right = 80.0
margin_bottom = 145.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 6 )
text = "0.00"
align = 2

[node name="Label3" type="Label" parent="Bubble/VBoxContainer"]
visible = false
self_modulate = Color( 0.945098, 1, 0, 1 )
margin_top = 99.0
margin_right = 80.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 5 )
text = "Omnicourse"

[node name="OCContainer" type="HBoxContainer" parent="Bubble/VBoxContainer"]
visible = false
margin_top = 112.0
margin_right = 80.0
margin_bottom = 130.0
custom_constants/separation = 0
alignment = 2

[node name="CourseLabel" type="Label" parent="Bubble/VBoxContainer/OCContainer"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 72.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 6 )
text = "000"
align = 1

[node name="CourseLabel2" type="Label" parent="Bubble/VBoxContainer/OCContainer"]
unique_name_in_owner = true
margin_left = 72.0
margin_right = 80.0
margin_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
text = "o"
align = 1

[node name="Label5" type="Label" parent="Bubble/VBoxContainer"]
visible = false
self_modulate = Color( 0.431373, 1, 0, 1 )
margin_top = 134.0
margin_right = 80.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 5 )
text = "Azimuth"

[node name="AzContainer" type="HBoxContainer" parent="Bubble/VBoxContainer"]
visible = false
margin_top = 147.0
margin_right = 80.0
margin_bottom = 156.0
custom_constants/separation = 0
alignment = 2

[node name="ALabel" type="Label" parent="Bubble/VBoxContainer/AzContainer"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 72.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 6 )
text = "000"
align = 1

[node name="CourseLabel2" type="Label" parent="Bubble/VBoxContainer/AzContainer"]
margin_left = 72.0
margin_right = 80.0
margin_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
text = "o"
align = 1

[node name="Label4" type="Label" parent="Bubble/VBoxContainer"]
visible = false
self_modulate = Color( 1, 0, 0.470588, 1 )
margin_top = 147.0
margin_right = 80.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 5 )
text = "CE"

[node name="ErrorContainer" type="HBoxContainer" parent="Bubble/VBoxContainer"]
visible = false
margin_top = 182.0
margin_right = 80.0
margin_bottom = 200.0
custom_constants/separation = 0
alignment = 2

[node name="ErrorLabel" type="Label" parent="Bubble/VBoxContainer/ErrorContainer"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 72.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 6 )
text = "000"
align = 1

[node name="CourseLabel2" type="Label" parent="Bubble/VBoxContainer/ErrorContainer"]
margin_left = 72.0
margin_right = 80.0
margin_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
text = "o"
align = 1

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )
